--- a/style.css
+++ b/style.css
@@ -13,20 +13,20 @@ body {
     font-family: "DM Sans";
     background-color: hsl(27, 66%, 92%);
     min-height: 100vh;
-    color: hsl(28, 10%, 53%)
+    color: hsl(28, 10%, 53%);
+    padding: 0 16px;
 }
 
 .container {
-    min-width: 540px;
     margin: 0 auto;  
 }
 
 .header {
     position: relative;
     background-color:  hsl(10, 79%, 65%);
-    padding: 33px 30px;
+    padding: 20px 20px;
     color: white;
-    margin-bottom: 24px;
+    margin-bottom: 15px;
     border-radius: 16px;
 }
 
@@ -36,70 +36,93 @@ body {
     top: 50%;
     right: 40px;
     transform: translateY(-50%);
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
-    background-color:  hsl(25, 47%, 15%);;
+    background-color:  hsl(25, 47%, 15%);
 }
 
 .header::after {
      content: "";
     position: absolute;
     top: 50%;
-    right: 70px;
+    right: 64px;
     transform: translateY(-50%);
-    width: 60px;
-    height: 60px;
-    border: 4px solid white;
+    width: 40px;
+    height: 40px;
+    border: 2px solid white;
     border-radius: 50%;
 }
 
 .header__description {
-    font-size: 24px;
-    margin-bottom: 10px;
+    margin-bottom: 6px;
 }
 
 .header__balance {
-    font-size: 36px;
+    font-size: 24px;
     font-weight: 700;
 }
 
 .chart {
     background-color: hsl(33, 100%, 98%);
     border-radius: 16px;
-    padding: 30px;
+    padding: 24px;
 }
 
 .chart__title {
-    font-size: 36px;
+    font-size: 24px;
     font-weight: 700;
     color: hsl(25, 47%, 15%);
 }
 
 .chart__container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    min-height: 384px;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    align-items: end;
+    gap: .75em;
+    min-height: 250px;
     box-shadow: 0px 3px rgba(0, 0, 0, 0.05);
-    margin-bottom: 36px;
+    margin-bottom: 24px;
 }
-
 
 .value {
     display: flex;
+    align-items: center;
+    position: relative;
     flex-direction: column;
-    margin: 30px 0;
-   
+    margin: 20px 0 ;
+}
+
+.tooltip {
+    position : absolute;
+    display: none;
+    background-color: hsl(25, 47%, 15%);
+    color: white;
+    padding: 6px;
+    top: -40px;
+    left:-6px;
+    border-radius: 4px;
+}
+
+.value:hover .tooltip {
+    display: block;
+}
+
+.value:hover {
+    cursor: pointer;
 }
 
 .fill {
     display: inline-block;
-    width: 50px;
+    width: 100%;
     /* height: 120px; */
     background-color:  hsl(10, 79%, 65%);
-    border-radius: 8px;
-    margin-bottom: 20px;
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
+
+.value span:nth-child(3){
+    font-size: 14px;
 }
 
 .fill.active {
@@ -107,7 +130,6 @@ body {
 }
 
 .expense {
-    font-size: 24px;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
@@ -115,6 +137,7 @@ body {
 
 .expense__percentage  {
     display: flex;
+    font-size: 16px;
     flex-direction: column;
     align-items: flex-end;
 }
@@ -126,7 +149,7 @@ body {
 
 .expense__total p:nth-child(2) {
     font-weight: 700;
-    font-size: 45px;
+    font-size: 32px;
     color: hsl(25, 47%, 15%);
-    margin-top: 12px;
+    margin-top: 6px;
 }
